Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

  For information on future releases, see ROADMAP.txt.

  Some future release (Zope 3.2.0)

    New features

      - Added a test browser. The test browser simulates a real Web browser as
        much as possible as a Python object. This allows us to write
        functional tests the same way the site would be experienced by the
        user. This greatly simplifies functional tests, makes documentation
        better and even helps analyzing usability.

      - addMenuItem directive supports a `layer` attribute.

      - Formalized the Publisher Response API.

        + Until now the publisher made assumptions about the form of ouput of
          a publishing process. Either the called method returned a string
          (regular or unicode) or the response's write() method was used
          directly to write the data. Those models do not work well with some
          protocols. Thus, now the publisher deals with result objects. Those
          are generally not well defined, but for HTTP they must implement the
          IResult interface.

        + HTTP responses provide two new methods that make reading the output
          easier: `consumeBody()` and `consumeBodyIter()`. Either method can
          be only called once. After that the output iterator is used and
          empty.

        + The WSGI specification specifically has some provisions in it that
          supported our use of writing directly to the output stream. However,
          this method of providing an output is strongly discouraged. Instead,
          the application should return an iterable. Using the new IResult
          implementation in the HTTP publisher, we can now return such an
          iterable.

        + When a retry is issued in the publisher, then a new request is