@@ -29,35 +29,50 @@ class IObjectEvent(Interface):
 
     object = Attribute("The subject of the event.")
 
+
 class IObjectCreatedEvent(IObjectEvent):
     """An object has been created.
 
     The location will usually be ``None`` for this event."""
 
+
 class IObjectCopiedEvent(IObjectCreatedEvent):
     """An object has been copied"""
+
 
 class IObjectModifiedEvent(IObjectEvent):
     """An object has been modified"""
 
+
 class IModificationDescription(Interface) :
     """ Marker interface for descriptions of object modifications.
-    
+
     Can be used as a parameter of an IObjectModifiedEvent."""
+
 
 class IAttributes(IModificationDescription) :
     """ Describes the attributes of an interface.
-   
+
     """
-    
+
     interface = Attribute("The involved interface.")
     attributes = Attribute("A sequence of modified attributes.")
-    
-    
+
+
+class ISequence(IModificationDescription) :
+    """ Describes the modified keys of a sequence-like interface.
+
+    """
+
+    interface = Attribute("The involved interface.")
+    keys = Attribute("A sequence of modified keys.")
+
+
 # BBB: will go in Zope3.3
 
 class IObjectAnnotationsModifiedEvent(IObjectModifiedEvent):
     """An object's annotations have been modified"""
+
 
 class IObjectContentModifiedEvent(IObjectModifiedEvent):
     """An object's content has been modified"""
